fix: Chat unread badge is not aligned - EXO-61969

--- a/application/src/main/webapp/css/components/chatDrawer.less
+++ b/application/src/main/webapp/css/components/chatDrawer.less
@@ -10,7 +10,7 @@
       position: absolute;
       left: 21px ~'; /** orientation=lt */ ';
       right: 21px ~'; /** orientation=rt */ ';
-      top: -2px;
+      top: -2.5px;
       font-size: 12px;
       min-width: 20px;
       height: 20px;
